<resources>
    <string name="app_name">Warehouse Master</string>

    <string name="employee_name">[Employee Name]</string>
    <string name="next_palette">Next Pallet</string>
    <string name="finish_palette">Finish Pallet</string>
    <string name="hold_palette">Place Pallet On Hold</string>
    <string name="no_palettes">No pallets to display!</string>
    <string name="employee_id">Employee ID</string>
    <string name="password">********</string>
    <string name="scanButton">Scan Product</string>
    <string name="return_button">Return</string>
    <string name="login_error">Login Error</string>

    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="hold_confirmation">Place pallet on hold and exit?</string>
    <string name="finish_confirmation">Finish pallet and exit?</string>
    <string name="next_stop_confirmation">Mark all selected orders as complete and move to next stop? Unselected orders will be marked as incomplete.</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>

    <string name="login_bar">Sign in</string>
    <string name="email_field_hint">Employee Username</string>
    <string name="password_field_hint">Password</string>
    <string name="forgot_password_button">Forgot?</string>
    <string name="password_match_failed">Entered passwords do not match!</string>
    <string name="login_button">Log In</string>
    <string name="logout_button">Log Out</string>
    <string name="login_failed">Invalid login credentials!</string>
    <string name="login_unauthorized">You are not authorized to use this app!</string>
    <string name="name_field_hint">First Name</string>
    <string name="surname_field_hint">Last Name</string>
    <string name="employee_id_hint">Employee ID</string>
    <string name="new_password_field_hint">New Password</string>
    <string name="repeat_password_field_hint">Re-type Password</string>
    <string name="change_password_button">Confirm</string>

    <string name="stocking_bar">Select a job</string>
    <string name="restocking_button">Restocking</string>
    <string name="receiving_button">Receiving</string>

    <string name="restocking_bar">Select product to restock:</string>
    <string name="search_hint">Search</string>
    <string-array name="search_array">
        <item>Product Name</item>
        <item>Manufacturer</item>
        <item>Description</item>
    </string-array>

    <string name="by_manufacturer">by Unlisted Manufacturer</string>
    <string name="description">No item description available…</string>
    <string name="shelf_stock_quantity">Quantity on Shelves</string>
    <string name="bulk_stock_quantity">Quantity in Bulk</string>
    <string name="to_move_quantity">Quantity to Move to Shelf</string>
    <string name="move_button">Move</string>
    <string name="negative_quantity_response">Enter a number greater than zero.</string>
    <string name="insufficient_quantity_response">Enter a number less than bulk stock.</string>

    <string name="receiving_bar">Scan a barcode:</string>
    <string name="pick_up_button">Pick Up</string>
    <string name="to_receive_quantity">Quantity to Receive</string>

    <string name="camera_needed">Camera permissions required to scan barcodes!</string>

    <string name="new_product_bar">New Product</string>
    <string name="name_label">Product Name</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="description_label">Description</string>
    <string name="price_label">Price</string>
    <string name="priority_label">Fragility</string>
    <string name="volume_label">Volume (cm^3)</string>
    <string name="empty_fields_response">Fields cannot be blank.</string>
    <string name="duplicate_product_response">Duplicate product already in inventory.</string>

    <string name="driver_bar">Select a route:</string>
    <string name="route_label">Route</string>
    <string name="route_quantity_label">Orders</string>
    <string name="order_label">Order</string>
    <string name="stop_label">Stop</string>
    <string name="next_stop_button">Next Stop</string>

    <string name="pref_key_server">server</string>
    <string name="pref_title_server">Server URL</string>
    <string name="pref_summary_server">Enter the URL of the server hosting the database.</string>
    <string name="pref_default_server">localhost</string>

    <string name="pref_key_port">port</string>
    <string name="pref_title_port">Connection Port</string>
    <string name="pref_summary_port">Enter the port to use to connect to the database.</string>
    <string name="pref_default_port">1433</string>

    <string name="pref_key_database">database</string>
    <string name="pref_title_database">Database Name</string>
    <string name="pref_summary_database">Enter the name of the database to use. Database must use Microsoft SQL Server and have tables formatted exactly as specified on the website otherwise crashes and unexpected behaviour will occur.</string>
    <string name="pref_default_database">warehouse</string>

    <string name="pref_key_username">username</string>
    <string name="pref_title_username">Database Admin Username</string>
    <string name="pref_summary_username">Enter the username used to access the database.</string>
    <string name="pref_default_username">admin</string>

    <string name="pref_key_password">password</string>
    <string name="pref_title_password">Database Admin Password</string>
    <string name="pref_summary_password">Enter the password for the admin account above.</string>
    <string name="pref_default_password">password</string>

    <string name="pref_key_protocol">protocol</string>
    <string name="pref_title_protocol">Connection Protocol</string>
    <string name="pref_summary_protocol">Enter the protocol used to connect to the database. Leave as default if you are unsure.</string>
    <string name="pref_default_protocol">TLSv1</string>

    <string name="database_warning">Set up database in settings before trying to log in.</string>





</resources>
