<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.birddogs.warehousemaster.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/textlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email_field_hint"
        android:inputType="text"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_field_hint"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="@+id/employeeIDField"
        app:layout_constraintStart_toStartOf="@+id/employeeIDField"
        app:layout_constraintTop_toBottomOf="@+id/employeeIDField" />

    <EditText
        android:id="@+id/surnameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/surname_field_hint"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="@+id/nameField"
        app:layout_constraintStart_toStartOf="@+id/nameField"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/employeeIDField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/employee_id_hint"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="@+id/emailField"
        app:layout_constraintStart_toStartOf="@+id/emailField"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <View
        android:id="@+id/divisorBar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameField" />

    <EditText
        android:id="@+id/newPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_password_field_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@+id/surnameField"
        app:layout_constraintStart_toStartOf="@+id/surnameField"
        app:layout_constraintTop_toBottomOf="@+id/divisorBar" />

    <EditText
        android:id="@+id/repeatPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/repeat_password_field_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordField"
        app:layout_constraintStart_toStartOf="@+id/newPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordField" />

    <ImageView
        android:id="@+id/backButtonBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:layout_constraintBottom_toBottomOf="@+id/backButton" />

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/keyboard_arrow_left"
        android:backgroundTint="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/changePasswordButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_password_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton" />


</android.support.constraint.ConstraintLayout>
